chore:fixed Product Image is not Centered on Firefox browser

--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -4287,3 +4287,21 @@ button.pswp__button--zoom:hover {
 		}
 	}
 }
+
+/**
+ * Firefox browser compatibility for WooCommerce product images.
+ *
+ * 1. Single product images misalign issue.
+ */
+ @-moz-document url-prefix() {
+	.woocommerce-js {
+	  div.product {
+		div.images {
+		  img {
+			width: 80%;
+		  }
+		}
+	  }
+	}
+  }
+  
